--- a/main.tex
+++ b/main.tex
@@ -334,7 +334,7 @@ matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversi
 \subsubsection{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$. It
+Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. It
 is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
@@ -344,7 +344,7 @@ $$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$ (Section 4):
 $$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
-With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
+With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
@@ -354,8 +354,8 @@ deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a
 range, with $\Gamma$, the Atiyah Constant (section 4.5).
 
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
-associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$, and the graviton mass is: 
-$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$
+associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below.
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
@@ -382,10 +382,10 @@ flickering hypothesis:
 (\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
-gravitation and weak nuclear force. This specifies the $G$ value to $10^-{6}$ precision (ppm). It is
+gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is
 compatible with the well-elaborate $(10^{-5})$ BIPM measurement [11], at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
-Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
 \qquad  \qquad \Leftrightarrow \\
@@ -393,7 +393,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section 4.
 
-\subsubsection{The omnipresence of the Kotov cycle in astrophysics}
+\subsubsection{Kotov cycle omnipresence in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -403,8 +403,7 @@ process [13].
 
 Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
-(1946) claimed that « la periode propre de vibration du Soleil, c'est-a-dire la periode de son infra-
-son (1/9 de jour), a joue un role essentiel dans la distribution des planetes superieures». Presumably,
+(1946) claimed that « la periode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a joue un role essentiel dans la distribution des planetes superieures». Presumably,
 the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
@@ -419,12 +418,12 @@ general.
 
 This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
-periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
+periods inferior to 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
 9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a
 chance probability $10^{-7}$.
 
-It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
+It seems very puzzling also that the spatial scale $t_{K} \approx 19.24$ A.U. occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
 where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
@@ -450,7 +449,7 @@ space; for details see Kotov, 2018).
 Recently it was shown, that the $t_{\Theta}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 
-It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
+It was shown in fact, that a number of superfast, with periods inferior to 2 days, exoplanets revolve
 around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
 9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
 firstly in the Sun, then - in other variable objects of the Universe (the probability that the two
@@ -494,14 +493,14 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \subsubsection{The Tifft, Arp and the Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
-speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
 
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
 density $\rho_{c}$.
 
-Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$. It corresponds to
+Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \subsection{The Logic of Prospective Dimensional Analysis}
@@ -521,10 +520,9 @@ holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambda
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
 \end{equation} which traduces in function of $P = m_P/m_e$ by:
 \begin{equation}
-ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)
+ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx ln^2(2P^5/a^6)
 \end{equation}
 Moreover, to $10^{-7}$, corresponding to $7 \times 10^{-6}$ precision on the above G value:
-more precisely, to $10^{-8}$ , corresponding to $10^{-7}$ precision on the above $G$ value:
 \begin{equation}
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
 \end{equation}
@@ -565,12 +563,12 @@ $
 m_{e} \cdot m_{p} \cdot m_{H}$
 
 Moreover, the above critical condition
-links the time $t = \frac{R}{c}$ and the mean mass density by the $c$-free formula:
+links the time $t = R/c$ and the mean mass density by the $c$-free formula:
 \begin{equation}
 \rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times 10^{-27} kg \cdot m^{-3}
 \end{equation}
 Thus, the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
-sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
+sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. This writes:
 \begin{equation}
 t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}.
 \end{equation}
@@ -595,7 +593,7 @@ T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.
 \begin{equation}
 T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s
 \end{equation}
-This would be the periodic time of a Super-cycle, which matches with Topological Axis at n = 30;
+This would be the periodic time of a Super-cycle, which matches with Topological Axis at n = 30,
 the holic dimension (see below), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
@@ -607,7 +605,7 @@ The simplest interpretation follows: this is the number of quantum events in a S
 
 The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories [17]. see below the dramatic properties of $O_M^3$.
 
-Introducing the above Pioneer abnormal deceleration $g_{Pn}$ , one gets the time: 
+Introducing the above Pioneer abnormal deceleration $g_{Pn}$, one gets the time: 
 $
 t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t^{\prime}_{e} )^{1/4}
 $, where $t_{Pn} = c/g_{PN}$ and $t^{\prime}_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
@@ -622,20 +620,20 @@ confirms the above Planck's wall breakdown.
 \markright{Your Full Names.  Short Title of Your Paper}
 \subsection{The eddington's constant 137}
 
-The initial Eddington's proposal for $a$ was the whole number 136, as the number of idependent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
+The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed:
 
 $$137 = 11^{2} + 4^{2}$$
 
 while, as seen above:
 
-$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$.
+$$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$$
 
 Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
 have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
-As ancient Egyptian used only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series: 
+As ancient Egyptian used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
 $$S_{5} = 137/60$$
 Indeed it appears in the Ptolemaic approximation for $\pi$: $$\pi_Pt = 377/120 = 2 +  S_{5}/2$$
 
@@ -659,8 +657,8 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
 meaning the ratio $a/137$ acts as a canonical ratio. Moreover, it is very close (3 ppb) to
-$$a/137 \approx 3^{a/F}$$,
-where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis is also used by the Cosmos. Also, to 3.6 ppm:
+$$a/137 \approx 3^{a/F}$$
+where the Tifft factor $F/a$ appears again, proving that the base 3, the optimal whole number basis, is also used by the Cosmos. Moreover, to 3.6 ppm:
 $$ a \approx (1-3^{-1/150})^{-1}$$
 confirms the role of the basis 3.
 
@@ -668,14 +666,14 @@ confirms the role of the basis 3.
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$ , where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $$T^{2} = L^{3} = N^{6}$$, where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
+prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study [18].
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
 
-This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
+This is also the 3rd Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
-dimension n = 30, the natural extension of the above :
+dimension n = 30, the natural extension of the above:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
@@ -708,14 +706,13 @@ Physics are very similar [3].
 Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
 
-So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-
-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
-Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
+So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
+Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
 
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$, as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term [22]. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -725,7 +722,7 @@ Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
+It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
 
 Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $$j^{22} \approx 3 P^2 $$ and, more precisely, to 0.01 \% :$$j^{22} \approx Pp_E^7 $$ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
@@ -737,7 +734,7 @@ It is also exhibited in the following holographic relation:
 \begin{equation}
 (4\pi/3) B^3 \approx \pi(F^3/a)^2,
 \end{equation}
-while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/A$, in the Hydrogen atom, with $E_e = m_ec^2$.
+while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/\hbar A$, in the Hydrogen atom, with $E_e = m_ec^2$.
 Note that, to 10 ppm and 2 ppm:
 \begin{equation}
 (H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
@@ -766,7 +763,7 @@ u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see the following sub-section).
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
-$a^{a} \approx u 1^(3\times(2^{8}-1))$
+$a^{a} \approx u_1^{3\times(2^{8}-1)}$
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
 simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
 
@@ -778,14 +775,14 @@ related to the Monster group cardinal order, to 1.5 ppm:
 \begin{equation}
 O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
 \end{equation}
-Moreover the above term appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
+Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
 $$e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}$$
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $f = a_w/2\pi(pH)^{3/2} \approx 8.43450$ appars as a computation basis, and the above relation implies, to 61 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The Bizouard constant, precizing the inverse of the standard 'strong coupling constant 0.1184(7), $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appars as a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
 One is struck by the following combination of the three dimensionless parameters, the electrical
-one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, 0.05 \% and 0.13 \%:
+one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, to 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
@@ -794,17 +791,17 @@ to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 
 $$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
 
-This confirms the above Complete Holic Principle, and the computation basis role of $Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$, and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$. Now, from $137 = 17 + 3\times 24$:
+This confirms the above Complete Holic Principle, and the computation basis role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
 Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) [10], where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
-$$O_MO_B\approx H^{2H/a} /approx (g_0/p)^a \approx (496/j)^137 \approx  n_{ph}/\delta^{1/2} $$
+$$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
-From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$.
+From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
@@ -854,7 +851,7 @@ The above study of fractional development of e leads to the following relation b
 Armand Wyler singularized a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
-A confirmation of a symmetry between a and 137 is the following relation involving H, the
+A confirmation of a symmetry between $a$ and 137 is the following relation involving $H$, the
 Hydrogen electron mass ratio, precise to 83 ppb:
 $$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
 One observe that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
@@ -865,10 +862,10 @@ A confirmation of a symmetry between $a$ and 137 is the two following approximat
 where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
 Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 which is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
-Note that, with $i = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
-$$R_{GC}/\lambdabar_e \approx i5^{137} \approx 6^{137}/i^2 \approx 6^{128}/(1+1/\sqrt2)$$
+Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
+$$R_{GC}/\lambdabar_e \approx q5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 leading to the approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ and confirming the role of bases $u = 5$ and $d = 6$, leading to (2.6 \%):
-$$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$,
+$$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
  In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. Now, this is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
 \begin{equation}
 a \approx 44\pi - Arccos(1/e)
@@ -898,7 +895,6 @@ One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula:
 \begin{equation}
 a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
-
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \subsection {The electroweak constant mathematical fine tuning}
@@ -940,7 +936,7 @@ Now one observes the Koide relation [22], where $\mu$ and $\tau$ are the muon an
 which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
 mass ratio at an epoch during which its measurement was false to 3 $\sigma$. With the above $\mu$ value, it
 gives $$\tau \approx 3477.441701$$
-The above Koide constant $p_K \approx 1842.604994$ is close to $p$, but, more interesting, it connects with the  Moonshine Monster dimension [23] $D = 196883$ of the Monster, to 48, 10, 13, 26 ppm:
+The above Koide constant $p_K \approx 1842.604994$ is close to $p$, but, more interesting, it connects with the  above Moonshine Monster dimension [23] $D = 196883$ of the Monster, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
 Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
