--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
 F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
-{\footnotesize  $^1$Retired Pr. Universite Paris 9, Orsay, France.\rule{0pt}{12pt}
+{\footnotesize  $^1$Retired Pr. Universite Paris 11, Orsay, France.\rule{0pt}{12pt}
 E-mail: hol137-at-yahoo-dot-com\\
 $^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
 $^3$Retired Pr. at Universite Louis Pasteur Strasbourg, France.
@@ -50,7 +50,7 @@ $^4$Retired Pr. at Universite of Dijon and Paris 6, France.
 $^5$Retired Pr. at Ecole Centrale, Paris, France.
 $^6$Astronomer at OBSPM, Paris, France.
 $^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
-$^8$Computer Science Engineer at OBSPM, Paris, France.
+$^8$Computer Science Engineer.
 $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Paris Malaquais, France.
 
 }\par
