--- a/main.tex
+++ b/main.tex
@@ -176,12 +176,12 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     For the superstring $n = 10$, it is the Pion. For $k = \pi$, $n = \gamma \times \Gamma$, $Y \approx 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
-    which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
-    With unit the electron mass, n = 24 would correspond to the graviton mass, while $n = \Gamma$, 
+    which identifies with the monoradial unit length of the Bekenstein-Hawking Univers entropy.
+    With unit the electron mass, n = 24 would correspond to the photon mass, while $n = \Gamma$, 
     to the graviton mass.
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
-    The central dimension is $n = 16$, suggesting that the whole sheme is tied to the Eddington's matrix $16 \times 16$.
+    The central dimension is $n = 16$, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$.
 \label{fig:figure_label}
 \end{figure*}
 
