--- a/main.tex
+++ b/main.tex
@@ -240,7 +240,7 @@ Principle, untill now devoted to 3D application only [6]:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincare stated [3], the Permanent Cosmology must favor such integral relations. This one
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated [3], the Permanent Cosmology must favor such integral relations. This one
 uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
@@ -551,7 +551,7 @@ The elimination of $c$ in the above $R$ formula means that the simplest basic di
 analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean mass, gives a good
 approximation for $R/2$. Indeed, in the Hypothesis of a coherent Cosmos, it is logical to discard $c$
 which is far two small a speed. This has not been observed during one century, since $c$ is always
-believed to be the single mandatory foundation of space-time. The warning of Poincare, the true
+believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}, the true
 discoverer of Relativity: `use 4D space but do not confound Space and Time` has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
 
@@ -1117,7 +1117,7 @@ massive gluon, which is independently seriously considered [31].
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
-Poincare, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
+Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
 1, impeded the fact that the Hubble-Lemaitre radius $R$ is a trivial length.
 
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
@@ -1205,9 +1205,9 @@ Sanchez F.M. \textit {A Coherent Resonant Cosmology Approach and its Implication
 \bibitem{4} Sanchez F.M., V. A. Kotov and C. Bizouard C. Towards a synthesis of two cosmologies: the
 steady-state flickering Universe., \textit{Journal of Cosmology}, v.\, 17, 7225-7237 (2011). % Here is referred book
 
-\bibitem{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincaré 1 (2002), 41-54.. % Here is referred book
+\bibitem{5} Bousso R., “The Holographic Principle”, \textit{Review of Modern Physics}, v.\, 74, p.834 (2002).[7] Duplantier B. Introduction à l'effet Casimir, Séminaire Poincar\'{e} 1 (2002), 41-54.. % Here is referred book
 
-\bibitem{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincaré 2 (2003), 100 (89-115. % Here is referred book
+\bibitem{6} Damour T. The Entropy of Black Hole: a Primer. Séminaire Poincar\'{e} 2 (2003), 100 (89-115. % Here is referred book
 
 \bibitem{7} Carr B.J. and Rees M. J. , “The anthropic principle and the structure of the physical world”,
 \textit{Nature} 278, 605-612 (1979). % Here is referred book
