--- a/main.tex
+++ b/main.tex
@@ -403,7 +403,7 @@ process [13].
 
 Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
-(1946) claimed that « la periode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a joue un role essentiel dans la distribution des planetes superieures». Presumably,
+(1946) claimed that « la p\'{e}riode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a jou\'{e} un role essentiel dans la distribution des plan\`{e}tes sup\'{e}rieures». Presumably,
 the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
