--- a/main.tex
+++ b/main.tex
@@ -57,14 +57,14 @@ $^9$Retired Maitre de Conference at Ecole Nationale Superieure d'Architecture Pa
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multibasis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
+The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multi-basis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
 The observed fine-tuning of Nature between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a progress in scientific computing.
 Three types of mathematical constants are considered: large, intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius $R$ $\approx$ 13.812 Gly.
 The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant $e$ as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest physical diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
 This dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
 The visible Universe wavelength `Topon`: 2$G$$\hbar$/$R$c$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to $n \approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
 The monochromatic holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
-This implies a tachyonic speed in the same ratio by respect to $c$, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
+This implies a tachyonic speed in the same ratio by respect to $c$, justifying the Planck renormalization of the Vacuum Energy, independently checked by the Casimir effect.
 The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where logarithms of Length, Time and Mass ratios are considered as vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines an absolute clock.
 This new scanning space-time structure is confirmed by a single-electron cosmology, connected with Kotov period, relying on Sternheimer's Scale Factor $j$ and Atiyah's constant $\Gamma$, which appear as privileged computational basis, as well as e, $\pi$ and $a$ $\approx$ 137.036, in liaison with the sporadic groups. While $j$ shows overwhelming biological pertinence, $\Gamma$ and Eddington's constant 137 enter dramatic ppb ($10^{-9}$) precision relations with particle data. This predics unificaton of mathematics, informatics, physics, chemistry and biology. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 %% TODO: Insérer axe topologique
@@ -1169,7 +1169,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the already refuted standard evolutionary model.
 \item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark d.
-\item 3/ Informatics software will be boosted by the principle of multibase computation.
+\item 3/ Informatics software will be boosted by the principle of multi-base computation.
 \item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies [30] are on this way. 
 \end{itemize}
 
