--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ This new scanning space-time structure is confirmed by a single-electron cosmolo
 \setcounter{page}{1}
 
 
-\markboth{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
+\markboth{F.M. Sanchez, \ V.A. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
 \section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
