--- a/main.tex
+++ b/main.tex
@@ -806,7 +806,7 @@ From the above relation, by taking the $137^th$ root, one obtains, to 0.03 \%: $
 This proves the close imbrication of the optimal bases.
 
 \section{Fine-tuning with basic mathematical constants}
-\markright{Your Full Names.  Short Title of Your Paper}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
 Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
 relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
